--- a/src/style/header.css
+++ b/src/style/header.css
@@ -19,12 +19,39 @@ html {
 .header_container {
   display: flex;
   justify-content: space-between;
-  height: 80px;
   align-items: center;
+  height: 80px;
   margin: 0 20px;
 }
 
-.header_container>form>label>input {
-  min-width: 300px;
-  margin-right: 0;
+.header_container a {
+  width: 30%;
+}
+
+.header_container .search_form {
+  width: 30%;
+  display: flex;
+  margin: 0;
+}
+
+.header_container .search_form input {
+  flex: 1;
+  margin: 0;
+}
+
+.header_container .login_form {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+
+.header_container .login_form input {
+  align-self: flex-end;
+  width: 30%;
+}
+
+.header_container .login_form label {
+  align-self: flex-end;
+  width: 30%;
 }
