--- a/src/style/header.css
+++ b/src/style/header.css
@@ -18,6 +18,7 @@ html {
 
 .header_container {
   display: flex;
+  min-width: fit-content;
   justify-content: space-between;
   align-items: center;
   height: 80px;
@@ -25,11 +26,11 @@ html {
 }
 
 .header_container a {
-  width: 30%;
+  min-width: 10%;
 }
 
 .header_container .search_form {
-  width: 30%;
+  min-width: 20%;
   display: flex;
   margin: 0;
 }
@@ -40,18 +41,18 @@ html {
 }
 
 .header_container .login_form {
-  width: 30%;
+  min-width: 25%;
   display: flex;
-  flex-direction: column;
+  justify-content: flex-end;
+  gap: 5px;
   margin: 0;
 }
 
 .header_container .login_form input {
   align-self: flex-end;
-  width: 30%;
+  width: 25%;
 }
 
-.header_container .login_form label {
-  align-self: flex-end;
-  width: 30%;
+.header_container .login_form button {
+  width: 10%;
 }
