--- a/src/style/header.css
+++ b/src/style/header.css
@@ -19,7 +19,7 @@ html {
 .header_container {
   display: flex;
   min-width: fit-content;
-  justify-content: space-between;
+  gap: 10%;
   align-items: center;
   height: 80px;
   margin: 0 20px;
@@ -44,8 +44,17 @@ html {
   min-width: 25%;
   display: flex;
   justify-content: center;
+  align-items: center;
+  margin-left: auto;
   gap: 5px;
   margin: 0;
+}
+
+.login_info_container {
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .header_container .login_form input {
@@ -53,6 +62,15 @@ html {
   width: 25%;
 }
 
-.header_container .login_form button {
-  width: 10%;
+.login_info_container a {
+  margin: auto;
+}
+
+.logged_info {
+  margin-left: auto;
+  display: flex;
+}
+
+.logged_info button {
+  margin-left: 5px;
 }
