--- a/src/style/header.css
+++ b/src/style/header.css
@@ -21,7 +21,8 @@ html {
   min-width: fit-content;
   gap: 10%;
   align-items: center;
-  height: 80px;
+  justify-content: space-between;
+  height: 90px;
   margin: 0 20px;
 }
 
@@ -43,6 +44,7 @@ html {
 .header_container .login_form {
   min-width: 25%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-left: auto;
@@ -51,26 +53,24 @@ html {
 }
 
 .login_info_container {
-  margin-left: auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
 
 .header_container .login_form input {
-  align-self: flex-end;
-  width: 25%;
+  width: 100%;
+  text-align: center;
 }
 
 .login_info_container a {
   margin: auto;
+  font-size: small;
 }
 
 .logged_info {
-  margin-left: auto;
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.logged_info button {
-  margin-left: 5px;
-}
+.logged_info button {}
