--- a/src/style/header.css
+++ b/src/style/header.css
@@ -41,39 +41,7 @@ html {
   margin: 0;
 }
 
-.header_container .login_form {
-  min-width: 25%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-left: auto;
-  gap: 5px;
-  margin: 0;
-}
-
-.login_info_container {
-  display: flex;
-  flex-direction: column;
-}
-
-.header_container .login_form input {
-  width: 100%;
-  text-align: center;
-}
-
-.login_info_container a {
-  margin: auto;
-  font-size: small;
-}
-
-.logged_info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.search_container {
+.header_container .search_container {
   display: flex;
   gap: 10px;
 }
