--- a/src/style/notification.css
+++ b/src/style/notification.css
@@ -1,6 +1,6 @@
 .notification_modal {
   position: absolute;
-  top: 10%;
+  top: 75px;
   left: 50px;
   text-align: center;
   width: fit-content;
