--- a/src/style/newUser.css
+++ b/src/style/newUser.css
@@ -5,9 +5,8 @@
   border-radius: 5px;
   margin: 5px;
   top: 20px;
-  left: -25%;
+  left: -30%;
   position: absolute;
-  display: none;
 }
 
 .new_user_form_container .new_user_form {
@@ -23,4 +22,8 @@
 
 .new_user_form_container .new_user_form input {
   margin-bottom: 10px;
+}
+
+.hide {
+  display: none;
 }
